[gd_scene load_steps=6 format=2]

[ext_resource path="res://buildings/farming_ranch/sprites/farm.png" type="Texture" id=1]
[ext_resource path="res://buildings/farming_ranch/Farming_ranch.gd" type="Script" id=2]
[ext_resource path="res://data/player_stats/Cow.tres" type="Resource" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 7 )

[sub_resource type="CircleShape2D" id=2]
radius = 86.1452

[node name="Farming_ranch" type="StaticBody2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )
cows = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 31 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -29.0
margin_top = -93.0
margin_right = 29.0
margin_bottom = -79.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = -38.0
margin_top = -80.0
margin_right = 38.0
margin_bottom = -66.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = -38.0
margin_top = -67.0
margin_right = 38.0
margin_bottom = -53.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = -49.0
margin_top = -52.0
margin_right = 48.0
margin_bottom = -21.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
